syntax = "proto3";

option java_package = "com.abc.grpc.hello";
option java_outer_classname = "HelloProto";
option java_generic_services = true;
option java_multiple_files = true;

service HelloService {
  rpc SayHello (stream HelloRequest) returns (stream HelloReply) {}
  rpc SayHelloAgain (stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}